[BE] refactor #115: 커스텀 어노테이션 추가 및 리팩토링