@@ -1,17 +1,17 @@
 package com.d102.file.controller;
 
-import com.d102.common.constant.DownloadConstant;
-import com.d102.common.response.Response;
 import com.d102.file.controller.docs.DownloadControllerDocs;
 import com.d102.file.dto.DownloadDto;
 import com.d102.file.service.DownloadService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.http.MediaType;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
-import java.nio.file.Paths;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import java.nio.file.Path;
 
 @RequestMapping("/download")
 @RequiredArgsConstructor
@@ -22,17 +22,20 @@ public class DownloadController implements DownloadControllerDocs {
 
     @GetMapping(value = "/profile")
     public ResponseEntity<ByteArrayResource> downloadProfile(@RequestParam("url") String profilePath) {
-        DownloadDto.ProfileResponse profileResponseDto = downloadService.downloadProfile(Paths.get(profilePath));
+        DownloadDto.ProfileResponse profileResponseDto = downloadService.downloadProfile(Path.of(profilePath));
         return ResponseEntity.ok()
-                .contentType(profileResponseDto.getProfileType())
+                .header(HttpHeaders.CONTENT_TYPE, profileResponseDto.getProfileType())
                 .body(new ByteArrayResource(profileResponseDto.getProfile()));
     }
 
+    // download pdf file
     @GetMapping(value = "/resume")
     public ResponseEntity<ByteArrayResource> downloadResume(@RequestParam("id") Long resumeId) {
         DownloadDto.ResumeResponse resumeResponseDto = downloadService.downloadResume(resumeId);
         return ResponseEntity.ok()
-                .contentType(resumeResponseDto.getResumeType())
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + resumeResponseDto.getName())
+                .header(HttpHeaders.CONTENT_LENGTH, resumeResponseDto.getLength())
+                .header(HttpHeaders.CONTENT_TYPE, resumeResponseDto.getResumeType())
                 .body(new ByteArrayResource(resumeResponseDto.getResume()));
     }
 
